Fix email text-overflow

--- a/src/components/card/card.component.css
+++ b/src/components/card/card.component.css
@@ -21,6 +21,8 @@
 }
 
 .monster-email {
+    overflow: hidden;
     color: darkblue;
-    text-decoration: none;    
+    text-decoration: none;
+    text-overflow: ellipsis;
 }
